Fixed titlebar layout issues

--- a/src/AppLayout/Header/Header.css
+++ b/src/AppLayout/Header/Header.css
@@ -16,7 +16,7 @@
   font-size: 1.8rem;
   font-weight: 600;
   padding: 5px 0;
-  margin-right: 50px;
+  margin-right: 15px;
 }
 
 .Header .nav {
